--- a/styles/monitoringStyles.css
+++ b/styles/monitoringStyles.css
@@ -33,6 +33,7 @@ body {
     overflow: hidden;
 }
 
+
 .image-wrapper img {
     width: 100%;
     height: 100%;
@@ -46,7 +47,7 @@ body {
 }
 
 .table-container {
-    background-color: #5e5e5ec9;
+    background-color: #444444;
     padding: 20px;
     border-radius: 8px;
     margin: 20px 0;
