--- a/styles/monitoringStyles.css
+++ b/styles/monitoringStyles.css
@@ -130,6 +130,13 @@ body {
     align-items: center;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    margin: 3rem;
+}
+
 @media (max-width: 768px) {
     .icon {
         height: 2rem;
@@ -141,11 +148,6 @@ body {
         flex-direction: column;
         align-items: flex-start;
     }
-
-    .btn {
-        width: 100%;
-        margin: 0.5rem 0;
-    }
 }
 
 @media (max-height: 900px) {
@@ -156,10 +158,5 @@ body {
     .nav-login {
         flex-direction: column;
         align-items: flex-start;
-    }
-
-    .btn {
-        width: 100%;
-        margin: 0.5rem 0;
     }
 }
